# nonstationarybandits

./: README.md  pyproject.toml
nsb/: base.py  distributions.py  environment.py  main.py  plotting.py  results_discussion.ipynb  type_hints.py  utils.py
nsb/agents/: base.py  eps_greedy.py  thompson.py  ucb.py
nsb/algorithms/stochastic/: base.py  eps_greedy.py  etc.py  ucb.py
nsb/distributions/: conjugacy.py  nonstationary.py  stationary.py  utils.py
nsb/environments/: stochastic.py
nsb/experiments/: arms.py  base.py  break_ts.py  sanity_checks.py  utils.py
nsb/plotting/: double_plot.py  plotting.py  utils.py
nsb/results/sanity_checks/: stationary_constant_arms_990704159414875581.pkl
nsb/trackers/: base.py  stochastic.py
tests/: test_base_environment.py  test_distributions.py  test_mab_agent.py  test_utils.py
