[tool.poetry]
name = "nsb"
version = "0.1.0"
description = ""
authors = ["Michael Scoones <m.g.scoones@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nptyping = "^2.5.0"
torch = "^2.4.0"
plotly = "^5.24.0"
pytest = "^8.3.3"
tqdm = "^4.66.5"
pathos = "^0.3.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
